ex4/testdata/typechecker/error/DeclTest-err2.java
class DeclTest {
	public static void main(String[] a){
    }
}

class A {
    int x;
    boolean x; // TE
}

